# FastLiGS

./: Cargo.toml  build.rs
model_onnx/: linear_DC_CO_9f3_d0.2.onnx  linear_DC_CO_9f6_d0.2.onnx  linear_DC_ID_9f3_d0.2.onnx  linear_DC_ID_9f6_d0.2.onnx  linear_DC_SST_9f3_d0.2.onnx  linear_DC_SST_9f6_d0.2.onnx  linear_DC_ST_9f3_d0.2.onnx  linear_DC_ST_9f6_d0.2.onnx  linear_DS_PR_9f3_d0.2.onnx  linear_DS_PR_9f6_d0.2.onnx  linear_DS_SST_9f3_d0.2.onnx  linear_DS_SST_9f6_d0.2.onnx  linear_DS_ST_9f3_d0.2.onnx  linear_DS_ST_9f6_d0.2.onnx
src/: cli.rs  gr_solver.rs  graph.rs  main.rs  nn.rs  parser.rs
src/gradualsemantics/: card_based.rs  categorizer.rs  counting.rs  max_based.rs  mod.rs  no_self_att_hcat.rs
src/gradualsemantics_opt/: categorizer.rs
src/model/: mod.rs
