[package]
name = "fast_nn_burn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
burn-import = "0.15"

[dependencies]
burn = { version = "0.15", features= ["ndarray"]}
burn-ndarray = "0.15"
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
memchr = "2.7"

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'
