[package]
name = "FastLiGS"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fligs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
burn-import = "0.17"

[dependencies]
burn = { version="0.17" , features= ["ndarray"]}
burn-ndarray = { version="0.17" }
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
memchr = "2.7"
mimalloc = { version = "*" }

[patch.crates-io]
# TODO: remove this once crates.io burn-import is updated with the new (non-yanked) zip 3.0.0/4.0.0 version
zip = { git = "https://github.com/zip-rs/zip2", rev="1d42731efcad72e9f653a5ca46ed8306f4a3ca72" }

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'
