[package]
name = "FastLiGS"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fligs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
burn-import = { version = "0.17.1", default-features = false, features = ["onnx"]}

[dependencies]
burn = { version="0.17.1" , default-features = false, features= ["ndarray"]}
burn-ndarray = { version="0.17.1" }
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
memchr = "2.7"
mimalloc = { version = "*" }

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'
